--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
   --button-portfolio-color: #212121;
   --portfolio-border: #eeeeee;
   --header-border: #ececec;
+  --section-second: #F5F4FA;
 }
 a {
   cursor: pointer;
@@ -59,11 +60,6 @@ img {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
-}
-
-.section-hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
 }
 
 .section-portfolio {
@@ -145,6 +141,7 @@ img {
 }
 .menu-contacts {
   display: flex;
+  align-items: center;
   margin-left: auto;
   list-style-type: none;
 }
@@ -153,7 +150,17 @@ img {
   margin-left: 50px;
 }
 
+.nav-icon {
+  box-sizing: border-box;
+  fill: currentColor;
+  margin-right: 10px;
+  margin-bottom: 0;
+}
+
+
 .contacts-link-phone-mail {
+  display: flex;
+  align-items: center;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--gray-color);
@@ -164,9 +171,21 @@ img {
 }
 /*Перша секція "замовити послугу"*/
 
-.try-us {
-  background-color: var(--main-bg-color);
+.try-us-hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  /* outline: 2px solid red; */
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  ),
+    url(../img/HW4/heroimg.jpg);
+  background-color: var(--button-portfolio-color);
 }
+
 .hero-header-class {
   margin-left: 235px;
   margin-right: 235px;
@@ -225,6 +244,25 @@ img {
   width: 270px;
 }
 
+
+/* Вставляем картиночки */
+.icon-bests {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+  background-color: var(--section-second);
+  border-radius: 4px;
+}
+
+.icon-bests:focus,
+.icon-bests:hover{
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+
 .bests-list:not(:last-child) {
   margin-right: 30px;
 }
@@ -264,11 +302,46 @@ img {
   list-style-type: none;
 }
 
+.team-members {
+  background-color: var(--white-color);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 
 .team-discription{
   padding-top: 30px;
   padding-bottom: 30px;
 }
+
+
+.social-items {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+.social-items-links {
+  height: 44px;
+  width: 44px;
+}
+.social-items-links + .social-items-links {
+  margin-left: 10px;
+}
+.social-link-push {
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social-link-push:hover,
+.social-link-push:focus {
+  background-color: var(--blue-color);
+}
+.social-links {
+  fill: currentColor;
+}
+
 
 .team-name {
   margin-bottom: 10px;
@@ -279,6 +352,7 @@ img {
   color: var(--button-portfolio-color);
 }
 .team-profession {
+  margin-bottom: 16px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
