--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
   --portfolio-border: #eeeeee;
   --header-border: #ececec;
   --section-second: #F5F4FA;
+  --fill-color:#AFB1B8;
 }
 a {
   cursor: pointer;
@@ -333,13 +334,20 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #afb1b8
 }
 .social-link-push:hover,
 .social-link-push:focus {
   background-color: var(--blue-color);
+  color: var(--white-color);
 }
 .social-links {
   fill: currentColor;
+}
+
+.social-links:hover,
+.social-links:focus {
+  fill: var(--white-color);
 }
 
 
@@ -359,6 +367,71 @@ img {
   text-align: center;
   color: var(--gray-color);
 }
+
+/* NEW section CLIENTS */
+.clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.text-clients {
+  display: block;
+  margin-bottom: 50px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.item-clients {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+
+.list-clients {
+  margin-right: 30px;
+  width: 170px;
+  height: 92px;
+  align-items: center;
+  box-sizing: border-box;
+  
+
+}
+
+.list-clients:last-child {
+  margin-right: 0;
+}
+
+
+.link-clients {
+  display: flex;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.logo-clients {
+  fill: var(--fill-color);
+}
+
+.link-clients:hover,
+.link-clients:focus {
+  border-color: var(--blue-color);
+}
+
+.link-clients:hover .logo-clients,
+.link-clients:focus .logo-clients{
+  fill: var(--blue-color);
+}
+
 /* Далі йдемо до підвалу */
 .footer-main {
   padding-top: 60px;
@@ -392,6 +465,71 @@ img {
 .logo-studio-footer {
   color: var(--white-color);
 }
+
+.footer-parts {
+  display: flex;
+}
+
+.footer-left-part {
+  display: block;
+}
+
+.footer-rigth-part {
+  display: block;
+  margin-left: 70px;
+}
+
+
+.right-text{
+  padding-top: 12px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--white-color);
+  margin-bottom: 20px;
+}
+
+.right-item {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+.rigth-list {
+  display: flex;
+  width: 44px;
+  height: 44px;
+}
+
+.rigth-list + .rigth-list {
+  margin-left: 10px;
+}
+
+.right-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--gray-color);
+  
+}
+
+.right-link:hover,
+.right-link:focus {
+  background-color: var(--blue-color);
+}
+
+.right-icon {
+  fill: var(--white-color);
+}
+
+
+
+
 /* Portfolio Page*/
 .main-section {
   background-color: var(--white-color);
@@ -444,6 +582,11 @@ img {
 
 .lists-blocks:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+
+.lists-blocks:hover,
+.lists-blocks:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .pictures-list {
