--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,9 @@ img {
   color: var(--gray-color);
 }
 .contacts-link-phone-mail:focus,
-.contacts-link-phone-mail:hover {
+.contacts-link-phone-mail:hover,
+.nav-icon:hover,
+.nav-icon :focus{
   color: var(--blue-color);
 }
 /*Перша секція "замовити послугу"*/
@@ -178,12 +180,13 @@ img {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
+  background-size: cover;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
     url(../img/HW4/heroimg.jpg);
-  background-color: var(--button-portfolio-color);
+  background-color: var(--button-portfolio-color); 
 }
 
 .hero-header-class {
@@ -471,7 +474,6 @@ img {
 }
 
 .right-text {
-  padding-top: 12px;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -504,7 +506,7 @@ img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: var(--gray-color);
+  background: rgba(255, 255, 255, 0.1);
 }
 
 .right-link:hover,
@@ -570,8 +572,12 @@ img {
   margin-bottom: 0;
 }
 
-.lists-blocks:hover,
-.lists-blocks:focus {
+.link-blocks {
+  display: block;
+
+}
+.link-blocks:hover,
+.link-blocks:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
